# wican-fw

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  flash_and_monitor.ps1  global_fix.h  ha-battery-alert.md  minify.bat  sdkconfig  sdkconfig.esp32c3  sdkconfig.esp32s3  sdkconfig.old  vehicle_profiles.json  wican_partitions_table.csv  wican_pro_partitions_table .csv
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: deploy-docs.yml  log-viewer-build.yml  pr-workflow.yml  vehicle_profiles.yml  vehicle_profiles_pr.yml  vehicle_profiles_validate.yml
.vehicle_profiles/: .prettierrc  Torque_to_WiCANjson.py  buildSupportedVehiclesList.js  merge.js  package-lock.json  package.json  params.json  schema.json  validate.js
.vehicle_profiles/from_torque/: Torque_to_WiCANjson.py  params.csv
.vehicle_profiles/src/: cars.js  params.js
components/autopid/: CMakeLists.txt  autopid.c  autopid.h  autopid_config.c  autopid_config.h  autopid_http.c  autopid_http.h  autopid_http_internal.h  autopid_http_test_can_filter.c  autopid_http_test_pid.c  autopid_http_test_pid_handlers.h  autopid_http_test_pid_util.c  autopid_http_test_pid_util.h
components/cert_manager/: CMakeLists.txt  cert_manager.c  cert_manager_core.c  cert_manager_core.h  cert_manager_http.c  cert_manager_http.h
components/cmd_ping/: CMakeLists.txt  cmd_ping.c
components/cmdline/: CMakeLists.txt  cmd_autopid.c  cmd_conn.c  cmd_debug.c  cmd_espnetlink.c  cmd_eth.c  cmd_factoryreset.c  cmd_imu.c  cmd_led.c  cmd_restart_tracker.c  cmd_rtc.c  cmd_sdcard.c  cmd_status.c  cmd_system.c  cmd_version.c  cmd_wifi.c  cmd_wusb.c  cmdline.c
components/cmdline/include/: cmd_autopid.h  cmd_conn.h  cmd_debug.h  cmd_espnetlink.h  cmd_eth.h  cmd_factoryreset.h  cmd_imu.h  cmd_led.h  cmd_restart_tracker.h  cmd_rtc.h  cmd_sdcard.h  cmd_status.h  cmd_system.h  cmd_version.h  cmd_wifi.h  cmd_wusb.h  cmdline.h
components/connection_manager/: CMakeLists.txt  connection_manager.c
components/debug_logs/: CMakeLists.txt
components/esp_wireguard/: .component_hash  .gitignore  CHECKSUMS.json  CMakeLists.txt  Kconfig  README.md  component.mk  idf_component.yml
components/espressif__usb_host_cdc_acm/: .component_hash  CHANGELOG.md  README.md  cdc_acm_host.c  idf_component.yml
components/espressif__usb_host_cdc_acm/test_app/main/: CMakeLists.txt  test_cdc_acm_host.c
components/espressif__usb_host_ch34x_vcp/: CMakeLists.txt  usb_host_ch34x_vcp.cpp
components/espressif__usb_host_vcp/: .component_hash  CMakeLists.txt  idf_component.yml
components/filesystem/: CMakeLists.txt  filesystem.c  filesystem.h
components/ha_webhooks/: CMakeLists.txt  ha_webhooks.h  ha_webhooks_config.c  ha_webhooks_http.c  idf_component.yml
components/https_client_mgr/: CMakeLists.txt  https_client_mgr.c  https_client_mgr.h
components/obd_logger/: CMakeLists.txt  obd_logger.c  obd_logger.h  obd_logger_db_manager.c  obd_logger_db_manager.h  obd_logger_iface.c  obd_logger_iface.h  obd_logger_ws_iface.c  obd_logger_ws_iface.h
components/restart_tracker/: CMakeLists.txt  restart_tracker.c  restart_tracker_coredump.c  restart_tracker_coredump.h  restart_tracker_http.c
components/usb_acm_cli/: CMakeLists.txt  usb_acm_cli.c
components/usb_eth_host/: CMakeLists.txt  usb_eth_asix.c  usb_eth_cdc_ecm.c  usb_eth_cdc_ncm.c  usb_eth_host.c  usb_eth_host_internal.h  usb_eth_netif_glue.c  usb_eth_netif_glue_internal.h  usb_eth_rndis.c  usb_eth_rtl8152.c
components/usb_eth_host/include/: usb_eth_host.h
components/usb_host_manager/: CMakeLists.txt  usb_host_manager.c  usb_host_manager_config.c  usb_host_manager_http.c  usb_host_manager_internal.h
components/usb_host_manager/include/: usb_host_manager.h  usb_host_manager_http.h
components/vpn_manager/: CMakeLists.txt  vpn_config.c  vpn_config.h  vpn_keygen.c  vpn_keygen.h  vpn_manager.c  vpn_manager_http.c  vpn_manager_http.h  vpn_wireguard.c  vpn_wireguard.h
components/vpn_manager/include/: vpn_manager.h  vpn_manager_http.h
components/wican_common/: CMakeLists.txt
components/ws_server/: CMakeLists.txt  ws_router.c  ws_server.c
components/ws_server/include/: ws_router.h  ws_server.h
docs/: README.md  app.config.ts  auto_connect_usage.md  nuxt.config.ts  package-lock.json  usb_host_manager_plan.md
docs/components/: Logo.vue
docs/content/: 0.index.md  Community.md  Contributing.md  Features.md
ha/: wican_example_flow.json
main/: CMakeLists.txt  auto_connect.c  auto_connect.h  autopid.c  autopid.h  ble.c  ble.h  can.c  can.h  comm_server.c  comm_server.h  config_mode.c  config_mode.h  config_server.c  config_server.h  console.c  console.h  dev_status.c  dev_status.h  elm327.c  elm327.h  expression_parser.c  expression_parser.h  filesystem.c  filesystem.h  frame_99.c  frame_99.h  ftp.c  ftp.h  gvret.c  gvret.h  homepage.html  homepage_full.html  hw_config.c  hw_config.h  icm42670.c  icm42670.h  idf_component.yml  imu.c  imu.h  (+53 more)
main/obd_fw/: V2.3.18.txt  V2.3.22.txt
main/web/: homepage_full.html  safemode.html
main/web/src/: dashboard.html  dashboard.js  dashboard_live.js  homepage.html  lucide_icons.js  main.js  main_bkup.kww  terminal.js  usbhost.js  ws_client.js
tools/https_test_server/: README.md  wican_https_test_server.py
tools/wican-log-viewer/: Cargo.toml
tools/wican-log-viewer/src/: main.rs
vehicle_profiles/: README.md  Torque_to_WiCANjson.ipynb  generic.json
vehicle_profiles/Cupra/: seat_leon.json
vehicle_profiles/Mitsubishi/: imiev.json
vehicle_profiles/Peugeot/: e-208.json
vehicle_profiles/Porsche/: taycan.json
vehicle_profiles/Skoda/: skoda_karoq  skoda_karoq.json
vehicle_profiles/audi/: a3.json
vehicle_profiles/bmw/: 528i.json  M340d.json  README.md  i3.json  supported.md
vehicle_profiles/bt1/: bt1.json
vehicle_profiles/byd/: atto3.json  byd_202410_update.json  dolphin.json  seal.json
vehicle_profiles/chevrolet/: bolt.json  traverse.json  volt.json
vehicle_profiles/chrysler/: pacifica.json
vehicle_profiles/citroen/: c-zero.json
vehicle_profiles/dacia/: spring.json
vehicle_profiles/fiat/: 600e.json  eUlysse.json
(+164 files in other folders)
