[package]
name = "wican-log-viewer"
version = "0.1.0"
edition = "2021"
authors = ["WiCAN"]
license = "GPL-3.0-or-later"
description = "Cross-platform UDP log viewer for WiCAN firmware"

[dependencies]
eframe = { version = "0.27", features = ["persistence"] }
egui = "0.27"
crossbeam-channel = "0.5"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
